--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Heading</h1>
-    <script src="Node.js"></script>
+    <!-- <script src="Node.js"></script> -->
+    <script src="module_exports.js"></script>
+    
 </body>
 </html>
